added entities and repositories, services

--- a/src/Core/SignalRApp.Application/SignalRApp.Application.csproj
+++ b/src/Core/SignalRApp.Application/SignalRApp.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SignalRApp.Domain\SignalRApp.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
