--- a/src/Presentation/SignalRApp.Api/appsettings.json
+++ b/src/Presentation/SignalRApp.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost,1433;Database=OrderManagementSignalRDB;User Id=sa;Password=Password123;TrustServerCertificate=True;"
+  }
 }
