Added Identity Login and Register process UI Layer

--- a/src/Presentation/SignalRApp.Api/SignalRApp.Api.csproj
+++ b/src/Presentation/SignalRApp.Api/SignalRApp.Api.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Core\SignalRApp.Application\SignalRApp.Application.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\SignalRApp.Infrastructure\SignalRApp.Infrastructure.csproj" />
       <ProjectReference Include="..\..\Infrastructure\SignalRApp.Persistence\SignalRApp.Persistence.csproj" />
     </ItemGroup>
 
