--- a/src/Infrastructure/SignalRApp.Infrastructure/SignalRApp.Infrastructure.csproj
+++ b/src/Infrastructure/SignalRApp.Infrastructure/SignalRApp.Infrastructure.csproj
@@ -10,4 +10,10 @@
       <ProjectReference Include="..\..\Core\SignalRApp.Application\SignalRApp.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Identity">
+        <HintPath>..\..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\8.0.5\Microsoft.AspNetCore.Identity.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
